--- a/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>WidgetPoint</class>
  <widget class="QWidget" name="WidgetPoint">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -151,7 +154,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tabInfos">
       <attribute name="title">
@@ -177,7 +180,7 @@
            <item>
             <widget class="QGroupBox" name="groupBox_3">
              <property name="enabled">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -213,8 +216,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>1333</width>
-                 <height>540</height>
+                 <width>98</width>
+                 <height>32</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -250,7 +253,7 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="0,1">
+          <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="0,0">
            <item>
             <widget class="QPushButton" name="pushButtonExportMeasures">
              <property name="text">
@@ -260,6 +263,9 @@
            </item>
            <item>
             <widget class="QCheckBox" name="checkBoxRawData">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="layoutDirection">
               <enum>Qt::RightToLeft</enum>
              </property>
@@ -585,8 +591,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>1363</width>
-             <height>401</height>
+             <width>98</width>
+             <height>40</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -635,8 +641,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>1363</width>
-             <height>400</height>
+             <width>98</width>
+             <height>40</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_9">
