--- a/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>1413</width>
-    <height>1000</height>
+    <height>988</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -208,6 +208,15 @@
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
              <widget class="QScrollArea" name="scrollArea">
+              <property name="mouseTracking">
+               <bool>false</bool>
+              </property>
+              <property name="verticalScrollBarPolicy">
+               <enum>Qt::ScrollBarAlwaysOn</enum>
+              </property>
+              <property name="horizontalScrollBarPolicy">
+               <enum>Qt::ScrollBarAlwaysOn</enum>
+              </property>
               <property name="widgetResizable">
                <bool>true</bool>
               </property>
@@ -216,8 +225,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>32</height>
+                 <width>1314</width>
+                 <height>540</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -591,8 +600,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>40</height>
+             <width>1361</width>
+             <height>400</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -641,8 +650,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>40</height>
+             <width>1361</width>
+             <height>399</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_9">
