--- a/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>1413</width>
-    <height>1000</height>
+    <height>0</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,6 +31,9 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEditPointName">
+       <property name="toolTip">
+        <string>This is your chosen point.</string>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -45,6 +48,9 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEditSensor">
+       <property name="toolTip">
+        <string>This is the chosen pressure sensor.</string>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -59,6 +65,9 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEditShaft">
+       <property name="toolTip">
+        <string>This is your chosen shaft.</string>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -66,6 +75,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonReset">
+       <property name="toolTip">
+        <string>Reset your computation.</string>
+       </property>
        <property name="text">
         <string>Reset</string>
        </property>
@@ -73,6 +85,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonCleanUp">
+       <property name="toolTip">
+        <string>Click here to clean your measures up!</string>
+       </property>
        <property name="text">
         <string>Clean-up...</string>
        </property>
@@ -80,6 +95,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonCompute">
+       <property name="toolTip">
+        <string>Click here to launch a direct model or calculate the Bayesian inversion via MMC technique.</string>
+       </property>
        <property name="text">
         <string>Compute...</string>
        </property>
@@ -112,6 +130,9 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="toolTip">
+        <string>The number of layers of your column.</string>
        </property>
       </widget>
      </item>
@@ -153,8 +174,11 @@
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Click here to see the computations you have made, check the column's temperature or pressure, or simply get information about your chosen point.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>4</number>
      </property>
      <widget class="QWidget" name="tabInfos">
       <attribute name="title">
@@ -216,8 +240,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>98</width>
-                 <height>32</height>
+                 <width>1335</width>
+                 <height>596</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -591,8 +615,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>40</height>
+             <width>1340</width>
+             <height>48</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -641,8 +665,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>40</height>
+             <width>1340</width>
+             <height>48</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_9">
