--- a/Molonaviz/src/molonaviz/frontend/ui/dialogCleanup.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/dialogCleanup.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1452</width>
-    <height>914</height>
+    <height>0</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -101,20 +101,27 @@
              </item>
              <item>
               <layout class="QGridLayout" name="gridLayout_4">
-               <item row="0" column="5">
-                <widget class="QSpinBox" name="spinBoxStartMonth">
-                 <property name="minimum">
-                  <number>1</number>
-                 </property>
-                 <property name="maximum">
-                  <number>12</number>
+               <item row="0" column="0">
+                <widget class="QLabel" name="label_2">
+                 <property name="text">
+                  <string>Starting date:</string>
                  </property>
                 </widget>
                </item>
-               <item row="0" column="4">
-                <widget class="QLabel" name="label_6">
+               <item row="1" column="4">
+                <widget class="QLabel" name="label_9">
                  <property name="text">
                   <string>M</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="7">
+                <widget class="QSpinBox" name="spinBoxEndYear">
+                 <property name="minimum">
+                  <number>1800</number>
+                 </property>
+                 <property name="maximum">
+                  <number>2200</number>
                  </property>
                 </widget>
                </item>
@@ -125,17 +132,20 @@
                  </property>
                 </widget>
                </item>
+               <item row="1" column="2">
+                <widget class="QSpinBox" name="spinBoxEndDay">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>31</number>
+                 </property>
+                </widget>
+               </item>
                <item row="1" column="0">
                 <widget class="QLabel" name="label_3">
                  <property name="text">
                   <string>End date:</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0">
-                <widget class="QLabel" name="label_2">
-                 <property name="text">
-                  <string>Starting date:</string>
                  </property>
                 </widget>
                </item>
@@ -146,6 +156,30 @@
                  </property>
                  <property name="maximum">
                   <number>31</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="5">
+                <widget class="QSpinBox" name="spinBoxStartMonth">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>12</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QLabel" name="label_8">
+                 <property name="text">
+                  <string>D</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="6">
+                <widget class="QLabel" name="label_10">
+                 <property name="text">
+                  <string>Y</string>
                  </property>
                 </widget>
                </item>
@@ -166,13 +200,10 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="2">
-                <widget class="QSpinBox" name="spinBoxEndDay">
-                 <property name="minimum">
-                  <number>1</number>
-                 </property>
-                 <property name="maximum">
-                  <number>31</number>
+               <item row="0" column="4">
+                <widget class="QLabel" name="label_6">
+                 <property name="text">
+                  <string>M</string>
                  </property>
                 </widget>
                </item>
@@ -183,37 +214,6 @@
                  </property>
                  <property name="maximum">
                   <number>12</number>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="7">
-                <widget class="QSpinBox" name="spinBoxEndYear">
-                 <property name="minimum">
-                  <number>1800</number>
-                 </property>
-                 <property name="maximum">
-                  <number>2200</number>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1">
-                <widget class="QLabel" name="label_8">
-                 <property name="text">
-                  <string>D</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="4">
-                <widget class="QLabel" name="label_9">
-                 <property name="text">
-                  <string>M</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="6">
-                <widget class="QLabel" name="label_10">
-                 <property name="text">
-                  <string>Y</string>
                  </property>
                 </widget>
                </item>
@@ -258,6 +258,9 @@
              </item>
              <item>
               <widget class="QPushButton" name="pushButtonSelectPoints">
+               <property name="toolTip">
+                <string>You can select different points during the same selection.</string>
+               </property>
                <property name="text">
                 <string>Select points</string>
                </property>
@@ -360,7 +363,7 @@
   </connection>
  </connections>
  <buttongroups>
-  <buttongroup name="temperatureGroup"/>
   <buttongroup name="outliersgroup"/>
+  <buttongroup name="temperatureGroup"/>
  </buttongroups>
 </ui>
