--- a/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1204</width>
-    <height>816</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -43,6 +43,9 @@
      </item>
      <item>
       <widget class="QSpinBox" name="spinBoxNLayersDirect">
+       <property name="toolTip">
+        <string>Number of layers of your column.</string>
+       </property>
        <property name="readOnly">
         <bool>false</bool>
        </property>
@@ -206,6 +209,9 @@
    </item>
    <item>
     <widget class="QGroupBox" name="groupBoxMCMC">
+     <property name="toolTip">
+      <string>Launch the Bayesian inversion.</string>
+     </property>
      <property name="title">
       <string>Execute inversion before</string>
      </property>
@@ -653,6 +659,9 @@
       <widget class="QPushButton" name="pushButtonRun">
        <property name="enabled">
         <bool>true</bool>
+       </property>
+       <property name="toolTip">
+        <string>Run the direct model.</string>
        </property>
        <property name="text">
         <string>Run</string>
