Revert "Merge branch 'main' of https://github.com/flipoyo/MOLONARI1D"
This reverts commit 6dba99359fe77d1652d1b70d164a3d115a251b7c, reversing
changes made to 5dcd48bdddbaf084ac04562431612cdac88213a3.

--- a/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/SamplingPointViewer.ui
@@ -2,15 +2,12 @@
 <ui version="4.0">
  <class>WidgetPoint</class>
  <widget class="QWidget" name="WidgetPoint">
-  <property name="enabled">
-   <bool>true</bool>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1413</width>
-    <height>988</height>
+    <height>1000</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_7" stretch="0,0">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0,0,0,0,0,0">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0,0,0,0,0,0,0,0,0,0,1">
      <property name="sizeConstraint">
       <enum>QLayout::SetNoConstraint</enum>
      </property>
@@ -31,9 +28,6 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEditPointName">
-       <property name="toolTip">
-        <string>This is your chosen point.</string>
-       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -48,9 +42,6 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEditSensor">
-       <property name="toolTip">
-        <string>This is the chosen pressure sensor.</string>
-       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -65,9 +56,6 @@
      </item>
      <item>
       <widget class="QLineEdit" name="lineEditShaft">
-       <property name="toolTip">
-        <string>This is your chosen shaft.</string>
-       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -75,9 +63,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonReset">
-       <property name="toolTip">
-        <string>Reset your computation.</string>
-       </property>
        <property name="text">
         <string>Reset</string>
        </property>
@@ -85,9 +70,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonCleanUp">
-       <property name="toolTip">
-        <string>Click here to clean your measures up!</string>
-       </property>
        <property name="text">
         <string>Clean-up...</string>
        </property>
@@ -95,9 +77,6 @@
      </item>
      <item>
       <widget class="QPushButton" name="pushButtonCompute">
-       <property name="toolTip">
-        <string>Click here to launch a direct model or calculate the Bayesian inversion via MMC technique.</string>
-       </property>
        <property name="text">
         <string>Compute...</string>
        </property>
@@ -131,30 +110,48 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="toolTip">
-        <string>The number of layers of your column.</string>
-       </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="displayparam">
-       <property name="enabled">
+      <widget class="QTableView" name="tableViewParams">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>60</height>
+        </size>
+       </property>
+       <property name="baseSize">
+        <size>
+         <width>200</width>
+         <height>60</height>
+        </size>
+       </property>
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOff</enum>
+       </property>
+       <property name="horizontalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOff</enum>
+       </property>
+       <attribute name="horizontalHeaderCascadingSectionResizes">
         <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>Show MCMC best parameters</string>
-       </property>
+       </attribute>
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>125</number>
+       </attribute>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Click here to see the computations you have made, check the column's temperature or pressure, or simply get information about your chosen point.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
      <property name="currentIndex">
-      <number>4</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabInfos">
       <attribute name="title">
@@ -180,7 +177,7 @@
            <item>
             <widget class="QGroupBox" name="groupBox_3">
              <property name="enabled">
-              <bool>false</bool>
+              <bool>true</bool>
              </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -208,15 +205,6 @@
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
              <widget class="QScrollArea" name="scrollArea">
-              <property name="mouseTracking">
-               <bool>false</bool>
-              </property>
-              <property name="verticalScrollBarPolicy">
-               <enum>Qt::ScrollBarAlwaysOn</enum>
-              </property>
-              <property name="horizontalScrollBarPolicy">
-               <enum>Qt::ScrollBarAlwaysOn</enum>
-              </property>
               <property name="widgetResizable">
                <bool>true</bool>
               </property>
@@ -225,8 +213,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>1334</width>
-                 <height>612</height>
+                 <width>1333</width>
+                 <height>540</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -262,7 +250,7 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="0,0">
+          <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="0,1">
            <item>
             <widget class="QPushButton" name="pushButtonExportMeasures">
              <property name="text">
@@ -272,9 +260,6 @@
            </item>
            <item>
             <widget class="QCheckBox" name="checkBoxRawData">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
              <property name="layoutDirection">
               <enum>Qt::RightToLeft</enum>
              </property>
@@ -600,8 +585,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>1369</width>
-             <height>428</height>
+             <width>1363</width>
+             <height>401</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -650,8 +635,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>1369</width>
-             <height>427</height>
+             <width>1363</width>
+             <height>400</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_9">
