--- a/Molonaviz/src/molonaviz/frontend/ui/DisplayParameters.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/DisplayParameters.ui
@@ -6,22 +6,103 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>502</width>
     <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QTableView" name="tableView">
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>40</y>
-     <width>301</width>
+     <x>0</x>
+     <y>50</y>
+     <width>1186</width>
      <height>192</height>
     </rect>
    </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="sizeAdjustPolicy">
+    <enum>QAbstractScrollArea::AdjustIgnored</enum>
+   </property>
+   <property name="alternatingRowColors">
+    <bool>false</bool>
+   </property>
+   <property name="wordWrap">
+    <bool>false</bool>
+   </property>
+   <property name="rowCount">
+    <number>1</number>
+   </property>
+   <attribute name="horizontalHeaderVisible">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="horizontalHeaderCascadingSectionResizes">
+    <bool>false</bool>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>100</number>
+   </attribute>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>194</number>
+   </attribute>
+   <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+    <bool>false</bool>
+   </attribute>
+   <attribute name="horizontalHeaderStretchLastSection">
+    <bool>true</bool>
+   </attribute>
+   <attribute name="verticalHeaderCascadingSectionResizes">
+    <bool>false</bool>
+   </attribute>
+   <attribute name="verticalHeaderShowSortIndicator" stdset="0">
+    <bool>false</bool>
+   </attribute>
+   <attribute name="verticalHeaderStretchLastSection">
+    <bool>false</bool>
+   </attribute>
+   <row>
+    <property name="text">
+     <string>Layer1</string>
+    </property>
+   </row>
+   <column>
+    <property name="text">
+     <string>Layer bottom depth (cm)</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Permeability (m/s)</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Porosity</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Thermal conductivity (W/m/K)</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Thermal capacity (J/m^3/K)</string>
+    </property>
+   </column>
   </widget>
  </widget>
  <resources/>
