--- a/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
@@ -222,7 +222,7 @@
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
+      <item row="3" column="0">
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
          <string>Priors</string>
@@ -537,79 +537,16 @@
         </layout>
        </widget>
       </item>
-      <item row="0" column="0">
+      <item row="1" column="0">
        <widget class="QGroupBox" name="groupBoxMCMCParam">
         <property name="title">
          <string>MCMC Parameters</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
-         <item row="2" column="4">
-          <widget class="QLabel" name="labelcstar">
-           <property name="text">
-            <string>c* :</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="labelChains">
-           <property name="text">
-            <string>Number of chains</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEditncr">
-           <property name="text">
-            <string>3</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="5">
-          <widget class="QLineEdit" name="lineEditDelta">
-           <property name="text">
-            <string>3</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="labelncr">
-           <property name="text">
-            <string>Number of crossover (ncr)</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="2">
-          <widget class="QLabel" name="labelc">
-           <property name="text">
-            <string>c :</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
             <string>Max Iterations:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEditChains">
-           <property name="text">
-            <string>10</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="3">
-          <widget class="QLabel" name="labelDelta">
-           <property name="text">
-            <string>Pairs of chains to compare</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="3">
-          <widget class="QLineEdit" name="lineEditc">
-           <property name="text">
-            <string>0.1</string>
            </property>
           </widget>
          </item>
@@ -620,10 +557,152 @@
            </property>
           </widget>
          </item>
+         <item row="0" column="2" colspan="2">
+          <widget class="QLabel" name="labelChains">
+           <property name="text">
+            <string>Number of chains</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="4" colspan="2">
+          <widget class="QLineEdit" name="lineEditChains">
+           <property name="text">
+            <string>10</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="6">
+          <widget class="QLabel" name="labelDelta">
+           <property name="text">
+            <string>Pairs of chains to compare</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="7">
+          <widget class="QLineEdit" name="lineEditDelta">
+           <property name="text">
+            <string>3</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>Persistence (days)</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="lineEditPersi">
+           <property name="text">
+            <string>1</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2" colspan="3">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Gelman-Rubin threshold</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="5" colspan="2">
+          <widget class="QLineEdit" name="lineEdit_2">
+           <property name="text">
+            <string>1.2</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="labelncr">
+           <property name="text">
+            <string>Number of crossover (ncr)</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="lineEditncr">
+           <property name="text">
+            <string>3</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2">
+          <widget class="QLabel" name="labelc">
+           <property name="text">
+            <string>c :</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="3" colspan="2">
+          <widget class="QLineEdit" name="lineEditc">
+           <property name="text">
+            <string>0.1</string>
+           </property>
+          </widget>
+         </item>
          <item row="2" column="5">
+          <widget class="QLabel" name="labelcstar">
+           <property name="text">
+            <string>c* :</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="6">
           <widget class="QLineEdit" name="lineEditcstar">
            <property name="text">
             <string>1e-6</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QGroupBox" name="groupBoxSample">
+        <property name="title">
+         <string>Sup-Sampling Steps</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_5">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_5">
+           <property name="text">
+            <string>Iteration step</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="lineEditIterStep">
+           <property name="text">
+            <string>10</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Space step</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
+          <widget class="QLineEdit" name="lineEditSpaceStep">
+           <property name="text">
+            <string>1</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="4">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Time step</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="5">
+          <widget class="QLineEdit" name="lineEditTimeStep">
+           <property name="text">
+            <string>1</string>
            </property>
           </widget>
          </item>
