--- a/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
@@ -607,7 +607,7 @@
           </widget>
          </item>
          <item row="1" column="5" colspan="2">
-          <widget class="QLineEdit" name="lineEdit_2">
+          <widget class="QLineEdit" name="lineEditThresh">
            <property name="text">
             <string>1.2</string>
            </property>
