--- a/Molonaviz/src/molonaviz/frontend/ui/mainwindow.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/mainwindow.ui
@@ -447,6 +447,9 @@
    </property>
   </action>
   <action name="actionChangeDatabase">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Change Database</string>
    </property>
