partial fix of issue #19 intrinsec k was used instead of K for water flows calculation in mono and multilayer configuration. The multilayer matrix was properly filled. I don't know yet the monolayer. Need to be checked. But the solution of the multilayer problem doesn't work (ie fix of the 2023 edition not implemented in pyheatmy)

--- a/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
+++ b/Molonaviz/src/molonaviz/frontend/ui/dialogCompute.ui
@@ -388,7 +388,7 @@
           </widget>
          </item>
          <item row="0" column="7">
-          <widget class="QLineEdit" name="lineEditMoinsLog10KSigma">
+          <widget class="QLineEdit" name="lineEditmoinslog10IntrinKSigma">
            <property name="minimumSize">
             <size>
              <width>100</width>
@@ -457,7 +457,7 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="labelMoinsLog10KMCMC">
+          <widget class="QLabel" name="labelmoinslog10IntrinKMCMC">
            <property name="text">
             <string>-log10(Permeability)</string>
            </property>
